<resources>
    <string name="app_name">Online Store Farouq</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_hint">name@example.com</string>
    <string name="password">Password</string>
    <string name="name_empty">Nama Empty or Not Valid</string>
    <string name="email_empty">Email Empty or Not Valid</string>
    <string name="password_empty">Password Empty or Not Valid</string>
    <string name="text_add_product">Add Product</string>
    <string name="text_product">Product</string>
    <string name="text_logout">Are you sure to Logout?</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="text_create_product">Create Product</string>
    <string name="description">Description</string>
    <string name="hint_description">Write description of product</string>
</resources>