<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addproduct.AddProductActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="5dp"
        android:background="@drawable/bg_ripple_5dp"
        android:layout_margin="22dp"/>

    <TextView
        style="@style/text_title_halaman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_create_product"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        style="@style/text_title"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:hint="@string/name"
        style="@style/text_hint"
        android:autofillHints="username"
        android:padding="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        style="@style/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        android:hint="@string/hint_description"
        android:textColorHint="@color/grey"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        android:autofillHints="name"
        android:padding="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"/>

</androidx.constraintlayout.widget.ConstraintLayout>