<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginRegisterActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_ripple_5dp"
        android:layout_margin="22dp"/>

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        style="@style/text_judul"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHeader"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>


    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:hint="@string/name"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:autofillHints="username"
        android:padding="15dp"
        android:textSize="12sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>


    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        android:hint="@string/email_hint"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:autofillHints="name"
        android:padding="15dp"
        android:textSize="12sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        android:textSize="12sp"
        android:drawableEnd="@drawable/icon_close_eye"
        android:inputType="textPassword"
        android:padding="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"/>

    <Button
        android:id="@+id/btnRegist"
        style="@style/TertiaryButtonRectangleTextCaps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>